# Poker

./: CMakeLists.txt  CMakeUserPresets.json  MakeFile  conanfile.txt  pyproject.toml  vcpkg.json
.github/workflows/: ci.yml  release.yml
include/: card.hpp  card_enums.hpp  classification_result.hpp  deck.hpp  executioner.hpp  game.hpp  hand.hpp  player.hpp  poker_enums.hpp  random.hpp  table.hpp
include/executioners/: console_executioner.hpp  interface.hpp  random_executioner.hpp
include/game/: blinds.hpp  game.hpp  game_player.hpp  player.hpp  pot_manager.hpp
include/neural_network/: dlib_policy.hpp  rl_actions.hpp  rl_featurizer.hpp  rl_trainer.hpp  training.hpp
neural_network/: __main__.py
poker/: __init__.pyi
src/: benchmarks.cpp  game.cpp  main.cpp  python_bindings.cpp  run_policy.cpp  test.cpp  train_rl.cpp
test/: CMakeLists.txt  execution_tests.cpp  game_logic_test.cpp  game_test.cpp  poker_tests.cpp
